@@ -31,20 +31,24 @@ public final class BenchmarkApplication {
     }
 
     public static void main(String[] args) throws Exception {
-        Files.createDirectories(Path.of("docs/reports"));
+        Path rawOutput = Path.of(System.getProperty("rekeyshare.benchmark.rawOutput",
+                "docs/reports/raw/e02-algorithm-benchmark.csv"));
+        Path summaryDirectory = Path.of(System.getProperty("rekeyshare.benchmark.summaryDirectory",
+                "docs/reports/summary"));
+        Files.createDirectories(rawOutput.getParent());
+        Files.createDirectories(summaryDirectory);
         List<String> rows = new ArrayList<>();
         rows.add("algorithm,parameterSpec,fileSizeBytes,round,keyGenMs,aesEncryptMs,encapsulateMs,reKeyGenMs,reEncryptMs,decapsulateMs,aesDecryptMs,totalMs,capsuleBytes,ciphertextBytes,success");
         benchmark(new RsaPreScheme(RsaCommonModulusParameters.generate(3072)), "common-modulus-3072-demo", rows);
         benchmark(new EccPreScheme(), "P-256-demo", rows);
-        Files.write(Path.of("docs/reports/performance-results.csv"), rows);
-        Files.writeString(Path.of("docs/reports/performance-summary.md"), summary(rows));
-        Files.writeString(Path.of("docs/reports/benchmark-rsa-vs-ecc.md"), comparison(rows));
-        rows.forEach(System.out::println);
+        Files.write(rawOutput, rows);
+        Files.writeString(summaryDirectory.resolve("e02-performance-summary.md"), summary(rows));
+        Files.writeString(summaryDirectory.resolve("e02-rsa-vs-ecc.md"), comparison(rows));
     }
 
     private static void benchmark(PreScheme scheme, String parameterSpec, List<String> rows) {
-        int warmup = 1;
-        int measurement = 3;
+        int warmup = Integer.getInteger("rekeyshare.benchmark.warmup", 20);
+        int measurement = Integer.getInteger("rekeyshare.benchmark.measurement", 100);
         int[] sizes = {1024, 100 * 1024, 1024 * 1024, 10 * 1024 * 1024};
         for (int fileSize : sizes) {
             for (int i = 0; i < warmup; i++) {
@@ -150,7 +154,9 @@ public final class BenchmarkApplication {
         MapKeyStats stats = MapKeyStats.from(rows);
         StringBuilder sb = new StringBuilder();
         sb.append("# Performance Summary\n\n");
-        sb.append("Source: `docs/reports/performance-results.csv`\n\n");
+        sb.append("Source: `../raw/e02-algorithm-benchmark.csv`\n\n");
+        sb.append("Formal experiment settings: warmup=20 and measurement=100 per algorithm/file size; "
+                + "JUnit may override these values for schema smoke checks.\n\n");
         sb.append("| Algorithm | File Size | Avg Total Ms | P50 | P95 | P99 | Stddev | Throughput B/s | Avg AES Encrypt Ms | Avg AES Decrypt Ms | Avg ReEncrypt Ms | Capsule Bytes | Success |\n");
         sb.append("|---|---:|---:|---:|---:|---:|---:|---:|---:|---:|---:|---:|---|\n");
         for (MapKeyStats.Entry entry : stats.entries()) {
@@ -169,7 +175,12 @@ public final class BenchmarkApplication {
                     entry.avgCapsule(),
                     entry.allSuccess ? "PASS" : "FAIL"));
         }
-        sb.append("\nThe CSV remains the source of truth; this summary is generated from the same rows.\n");
+        sb.append("\nThe CSV remains the source of truth; this summary is generated from the same rows.\n\n");
+        sb.append("## Analysis\n\n");
+        sb.append("Correctness passed for every measured row. On a warmed JVM with CPU AES acceleration, "
+                + "AES-GCM throughput can be faster than the conservative planning interval; lower latency is not "
+                + "a regression when authentication and recovery checks remain successful. RSA/ECC values are "
+                + "baseline comparison data only and do not change their experimental security status.\n");
         return sb.toString();
     }
 
@@ -177,7 +188,7 @@ public final class BenchmarkApplication {
         return "# RSA vs ECC Benchmark\n\n"
                 + "RSA-PRE and ECC-PRE are measured through the same lifecycle: key generation, AES encryption, PRE encapsulation, re-key generation, proxy re-encryption, decapsulation, and AES decryption.\n\n"
                 + "The PRE stages process the 32-byte DEK capsule, so their cost is mostly independent of plaintext size. AES-GCM stages scale with file size.\n\n"
-                + "See `performance-summary.md` for the generated aggregation table.\n\n"
+                + "See `e02-performance-summary.md` for the generated aggregation table.\n\n"
                 + "## Parameters\n\n"
                 + "| Item | Value |\n"
                 + "|---|---|\n"
@@ -185,8 +196,8 @@ public final class BenchmarkApplication {
                 + "| ECC | `ECC-PRE-P-256-demo` |\n"
                 + "| AES | AES-256-GCM, 12-byte nonce, 128-bit tag |\n"
                 + "| File sizes | 1KB, 100KB, 1MB, 10MB |\n"
-                + "| Measurement rounds | 3 per algorithm/size |\n"
-                + "| Warmup | 1 per algorithm/size |\n"
+                + "| Measurement rounds | 100 per algorithm/size |\n"
+                + "| Warmup | 20 per algorithm/size |\n"
                 + "| Java observed in this run | Java 25.0.2 |\n"
                 + "| Recommended reproducible runtime | Java 17 LTS |\n";
     }
